# temporal_utils_python

./: .gitignore  LICENSE  README.md  pyproject.toml  temporal_sharp_edges.md
examples/: hello_example.py  hello_runner.py  hello_w_pydantic.py  pydantic_starter.py
src/temporal_utils/: __init__.py  base_class.py  collectors.py  converter.py  execution_options.py  validation.py  worker.py
src/tests/: conftest.py  test_base_activity.py  test_base_class.py  test_base_validator.py  test_base_workflow.py  test_validation_parsing.py  test_worker.py
temporal_utils/: __init__.py  base_class.py  collectors.py  converter.py  decorators.py  execution_options.py  instances.py  validation.py  worker.py
tests/: test_base_activity.py  test_base_workflow.py  test_validation_parsing.py  test_worker.py
tests/data/bad_validation_data_generated/dir_with_sub_dir/: sibling_clone.py
tests/data/good_validation_data_generated/: clone_1.py
