[project]
name = "temporal-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Saxon", email = "me@saxonhunt.com" }]
requires-python = ">=3.10"
dependencies = ["temporalio==1.8.0", "pydantic[email]~=2.7.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest~=8.2.2",
    "mypy~=1.11.1",
    "ruff~=0.8.4",
    "pyright~=1.1.375"
]


[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = false
namespace_packages = true
exclude = ['.venv', "tests/*"]
plugins = [
    "pydantic.mypy",
]