[project]
name = "temporal_utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Saxon", email = "me@saxonhunt.com" }]
requires-python = ">=3.10"
dependencies = ["temporalio==1.11.0", "pydantic~=2.11.3"]


[tool.uv]
dev-dependencies = [
    "pytest~=8.3.5",
    "mypy~=1.15.0",
    "ruff~=0.11.7",
    "pyright~=1.1.400",
]


[tool.mypy]
ignore_missing_imports = true
# check_untyped_defs = true
# disallow_untyped_calls = true
# disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = false
namespace_packages = true
exclude = ['.venv', "tests/*"]
plugins = ["pydantic.mypy"]

[tool.ruff.lint]
# 1. Ignore F841 (local variable is assigned to but never used)
# 2. Ignore E711 (comparison to None should be 'if cond is None:')
# 3. Ignore E712 (comparison to True should be 'if cond is True:' or 'if cond:')
ignore = ["F841", "E711", "E712"]
extend-select = ["I"]

[tool.ruff.lint.isort]
order-by-type = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
